--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
     <form id="contact-form">
         <input type="text" name="user_name" placeholder="Your Name" required />
         <input type="email" name="user_email" placeholder="Your Email" required />
+        <input type="text" name="subject" placeholder="Subject" required />
         <textarea name="message" placeholder="Your Message" required></textarea>
         <button type="submit">Send</button>
     </form>
